--- a/pricing-table.html
+++ b/pricing-table.html
@@ -13,7 +13,8 @@
 
     /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 1250px) {
-      
+      flex-direction: column;
+      height: 100%
     }
     .pricing-container
     {
